# wg-meta

./: .gitignore  AUTHORS  CHANGES  LICENSE  MANIFEST  MANIFEST.SKIP  Makefile.PL  Makefile.am  README.md  README.pod  Todo.md  aclocal.m4  bootstrap  configure  configure.ac  cpanfile  dist.sh  test.pl  wg-meta.contract  wg-meta.schema.json  wg-meta.yaml
.debian/: Makefile  Makefile.am
.debian/DEBIAN/: control
etc/: Makefile.am  wg-meta.v1.schema.json  wg-meta.yaml  wg_dummy_config
lib/: Makefile.am
lib/Config/: Handler.pm
lib/WGmeta/: Constants.pm  Utils.pm  ValidAttributes.pm  Validator.pm
lib/WGmeta/Cli/: Commands.pm  Human.pm  Router.pm
lib/WGmeta/Cli/Commands/: Add.pm  Apply.pm  Command.pm  Disable.pm  Enable.pm  Help.pm  Set.pm  Show.pm
lib/WGmeta/Wireguard/Wrapper/: Bridge.pm  Config.pm  Show.pm
lib/Wireguard/: WGmeta.pm  WGmeta.pod  Wrapper.pm
lib/Wireguard/WGmeta/: Cli.pod  IPmanager.pm  Index.pod  Utils.pm  ValidAttributes.pm  Validator.pm
lib/Wireguard/WGmeta/Cli/: Human.pm  Router.pm  TerminalHelpers.pm
lib/Wireguard/WGmeta/Cli/Commands/: Add.pm  Apply.pm  Command.pm  Disable.pm  Enable.pm  Help.pm  Remove.pm  Set.pm  Show.pm
lib/Wireguard/WGmeta/Parser/: Conf.pm  Config.pm  Config2.pm  Middleware.pm  Show.pm
lib/Wireguard/WGmeta/Wrapper/: Bridge.pm  Config.pm  ConfigT.pm  Show.pm
lib/wg_meta/: Commands.pm  Human.pm  Utils.pm
t/: cli_test.t  concurrency_test.t  wrapper_custom_attrs.t  wrapper_secure_mode.t  wrapper_test.pl  wrapper_test.t
t/Data/: wg0.conf  wg1.conf  wg_show_dummy  wg_show_dump
t/Data/test/: mini_wg1.conf
t/test_data/: mini_wg0.conf  mini_wg1.conf
